--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ comrak = "0.6"
 clap = "2"
 rand = "0.6"
 chrono = "0.4"
-scraper = "0.10"
+html5ever = "*"
 zip = "0.5"
 serde = { version = "1.0", features = ["derive"] }
 colored = "1.8"
