--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,18 @@
 [package]
 name = "repub"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Kaisei Yokoyama <yokoyama.kaisei.sm@alumni.tsukuba.ac.jp>"]
 edition = "2018"
-description = "convert markdown(s) to epub"
+
+description = "A tool to convert markdown documents to epub."
 license = "MIT"
+repository = "https://github.com/KaiseiYokoyama/repub"
+readme = "README.md"
 categories = ["epub","markdown"]
+
+exclude = [
+    "test/*"
+]
 
 [dependencies]
 failure = "0.1"
