--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,9 @@ exclude = [
 failure = "0.1"
 comrak = "0.6"
 clap = "2"
-rand = "0.6"
+rand = "0.7"
 chrono = "0.4"
-html5ever = "*"
+html5ever = "0.24"
 zip = "0.5"
 serde = { version = "1.0", features = ["derive"] }
 colored = "1.8"
