--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,5 @@ html5ever = "0.24"
 zip = "0.5"
 serde = { version = "1.0", features = ["derive"] }
 colored = "1.8"
+log = "0.4"
+env_logger = "0.6"
