--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,6 @@ html5ever = "0.24"
 zip = "0.5"
 serde = { version = "1.0", features = ["derive"] }
 #colored = "1.8"
-colored = { git = "https://github.com/tforgione/colored.git", branch = "master" }
+colored_truecolor = "0.1.0"
 log = "0.4"
 env_logger = "0.6"
