--- a/.github/workflows/PRtoMaster.yml
+++ b/.github/workflows/PRtoMaster.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: macOS-latest
     strategy:
       matrix:
-        rust: stable
+        rust: [stable]
     steps:
     - uses: actions/checkout@v1
     - uses: hecrj/setup-rust-action@v1
