--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ chrono = "0.4"
 html5ever = "0.24"
 zip = "0.5"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 #colored = "1.8"
 colored_truecolor = "0.1.0"
 log = "0.4"
