--- a/examples/usage/repub_config.json
+++ b/examples/usage/repub_config.json
@@ -1,1 +1,17 @@
-{"target":"usage","writing_mode":"htb","title":"title","creator":"K.Yokoyama","language":"ja","book_id":"RLMexySEfR3y5ourh0AUQoUYuvCI7X","toc_depth":2,"verbose":true,"save":true,"config":true,"cover_image":"cover.png","ignores":["repub_config.json","cover.png"]}
+{
+  "target": "usage",
+  "writing_mode": "htb",
+  "title": "title",
+  "creator": "K.Yokoyama",
+  "language": "ja",
+  "book_id": "RLMexySEfR3y5ourh0AUQoUYuvCI7X",
+  "toc_depth": 2,
+  "verbose": true,
+  "save": true,
+  "config": true,
+  "cover_image": "cover.png",
+  "ignores": [
+    "repub_config.json",
+    "cover.png"
+  ]
+}
